--- a/public/index.html
+++ b/public/index.html
@@ -202,6 +202,7 @@
       </div>
 
       <div id="content">
+			<a href="/users/sign_in"> Login </a>
         <div id="header">
           <h1>Welcome aboard</h1>
           <h2>You&rsquo;re riding Ruby on Rails!</h2>
